<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_recipes"
        android:icon="@drawable/ic_recipes"
        android:title="@string/recipes" />
    <item
        android:id="@+id/nav_meal_planning"
        android:icon="@drawable/ic_meal_planner"
        android:title="@string/meal_planner" />
    <item
        android:id="@+id/nav_generate_recipe"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/generate_recipe" />
    <item
        android:id="@+id/nav_shopping_list"
        android:icon="@drawable/ic_shopping_list"
        android:title="@string/shopping_list" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>